Bug Fix: Resize Event Trigger

WebMediaPlayerMS triggers Resize event when the new sized frame
enters the player. However, one would need to wait some time
(~30 ms) for that frame to be displayed. Thus at the instant when
resize is triggered, javascript is still seeing the old size.

In this CL, we move the trigger to when |current_frame_| is updated.

BUG=604795

Review URL: https://codereview.chromium.org/1895233003

Cr-Commit-Position: refs/heads/master@{#388635}

Former-commit-id: 4089952731e1ad0a6cf83764042d59a41fbc42fe